--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ p a:hover {
 #footer div ul li #pinterest:hover {
 	background-position: -44px -132px;
 }
-/* MY CSS */
+/* ----------------------MY CSS */
 
 .welcome {
 	background-color: #252525;
@@ -428,13 +428,16 @@ p a:hover {
 /* genre selector */
 #clicker{
 	display: flex;
-	justify-content: center;
+	justify-content: flex-end;
+	flex-direction: column;
+	flex-wrap: wrap;
 	font-family: 'leckerli_oneregular';
-	padding-top: 30px;
-	margin-top: 10px;
+	border: 1px solid red;
+	height: 100px
+
 }
 
-/* Albums Animation!*/
+/* ---------------------- Albums Animation!*/
 .loop_wrap {
 	display: flex;
 	width: 100%;
@@ -476,12 +479,184 @@ p a:hover {
 	animation-play-state: paused;
   }
 /* Welcome Text */	
-  h3 {
+  #featured h3 {
 	font-family: 'leckerli_oneregular';
 	position: absolute;
 	top: -10%;
 	color: #e79e9e;
 	font-size:3.5em;
   }
+  /* GALLERY PAGE */	
+
+.gallery img{
+	width: 300px;
+	height: 300px;
+  }
 
 
+
+/*  START 
+"WELCOME TO" STYLE   
+[DISCLAIMER I DO NOT OWN THIS STYLE] 
+credits to Alpine Day
+*/
+ 
+.button-53 {
+/* adjusted some parameters*/
+  background-color: #3DD1E7;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  display: flex;
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1.9rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.75rem;
+  padding: .75rem 1.65rem;
+  position: relative;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 360px;
+  position: relative;
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-family: 'poller_oneregular';
+}
+
+.button-53:focus {
+  outline: 0;
+}
+
+.button-53:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+
+.button-53:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+
+@media (min-width: 768px) {
+  .button-53 {
+    padding: .75rem 3rem;
+    font-size: 1.25rem;
+  }
+}
+/* END OF WELCOME BUTTON STYLE  [c Alpine Day] */
+
+
+.welcome-button{
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-bottom: 30px;
+	padding: 30px 0px;
+}
+.welcome-button button{
+	position: absolute;
+	right: 20%;
+
+}
+/* ----------- ABOUT Button --------------------------- */
+.about{
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+	margin-bottom: 0px;
+	padding: 10px 10px;
+	
+
+}
+
+/* ----------- ABOUT Button CSS STYLE --------------------------- */
+
+
+/* CSS */
+.button-85 {
+  padding: 0.6em 15em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+/* ----------- END ABOUT Button CSS STYLE  by --------------------------- */
+.button-85 a{
+	text-decoration: none;
+	color: white;
+	font-size: 2em;
+	font-style: 'Arial';
+	
+}
